tempfile/derive_more/tests/compile_fail/display/mutlifield_enum_variant_without_attribute.rs
#[derive(derive_more::Display)]
enum Enum {
    Variant { foo: String, bar: String },
}

fn main() {}
